--- a/android/app/src/debug/AndroidManifest.xml
+++ b/android/app/src/debug/AndroidManifest.xml
@@ -4,4 +4,8 @@
          to allow setting breakpoints, to provide hot reload, etc.
     -->
     <uses-permission android:name="android.permission.INTERNET"/>
+    <intent-filter>
+                 <action android:name="FLUTTER_NOTIFICATION_CLICK" />
+                 <category android:name="android.intent.category.DEFAULT" />
+    </intent-filter> 
 </manifest>
