--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_auth: ^0.18.0
   cloud_firestore: ^0.14.0
   modal_progress_hud: ^0.1.3
+  firebase_messaging: ^7.0.0
 
 dev_dependencies:
   flutter_test:
