--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,5 +58,6 @@ flutter {
 
 dependencies {
     implementation 'androidx.multidex:multidex:2.0.0'
+    implementation 'com.google.firebase:firebase-analytics:17.5.0'
 }
 
