--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,11 @@ dependencies:
   animated_text_kit: ^2.2.0
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0
-  cloud_firestore: ^0.14.0
+  cloud_firestore: ^0.14.1+3
   modal_progress_hud: ^0.1.3
   firebase_messaging: ^7.0.0
+  flutter_slider_drawer: ^1.0.3
+  flutter_inner_drawer: ^0.5.7+2
 
 dev_dependencies:
   flutter_test:
